fixed jumping info text

--- a/public/css/front_end/store-page.less
+++ b/public/css/front_end/store-page.less
@@ -524,6 +524,7 @@
         font-size: 13px;
         margin: -13px 0 20px;
         line-height: 16px;
+        min-height: 130px;
         @media only screen and (max-width: 779px){
             margin: 0 0 20px;
         }
@@ -545,7 +546,6 @@
         .textbox{
             overflow: hidden;
             padding: 0 3px 8px;
-            
             @media only screen and (max-width: 979px){
                 clear: both;
                 padding: 0 0 8px;
